--- a/Calculator/app/src/main/res/layout/landscape.xml
+++ b/Calculator/app/src/main/res/layout/landscape.xml
@@ -18,10 +18,11 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
             android:layout_weight="1"
             android:background="@color/teal_200"
             android:ems="10"
-            android:gravity="right|center"
+            android:gravity="bottom|right"
             android:inputType="textPersonName"
             android:text="0"
             android:textSize="40pt" />
@@ -29,13 +30,13 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="-20dp"
             android:layout_weight="1">
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
 
                 <Button
                     android:id="@+id/btn_minus"
@@ -45,10 +46,9 @@
                     android:layout_weight="1"
                     android:background="@color/black"
                     android:onClick="Clear"
-                    android:text="-"
+                    android:text="AC"
 
-                    android:textColor="@color/white"
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btnPlus"
@@ -60,22 +60,19 @@
                     android:onClick="operaterEvent"
                     android:text="+"
 
-                    android:textColor="@color/white"
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/Divide"
                     android:layout_width="30pt"
                     android:layout_height="30pt"
                     android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
                     android:layout_weight="1"
                     android:background="@color/black"
                     android:onClick="operaterEvent"
-
                     android:text="/"
-                    android:textColor="@color/white"
-                    android:textSize="34sp"></Button>
+
+                    ></Button>
 
                 <Button
                     android:id="@+id/multiply"
@@ -87,14 +84,13 @@
                     android:onClick="operaterEvent"
                     android:text="*"
 
-                    android:textSize="34sp"
-                    tools:ignore="TextContrastCheck"></Button>
+                    ></Button>
             </TableRow>
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                >
+                android:layout_marginTop="5dp">
 
 
                 <Button
@@ -107,7 +103,7 @@
                     android:onClick="numberEvent"
                     android:text="1"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_two"
@@ -119,7 +115,7 @@
                     android:onClick="numberEvent"
                     android:text="2"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_three"
@@ -131,7 +127,7 @@
                     android:onClick="numberEvent"
                     android:text="3"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_four"
@@ -143,14 +139,13 @@
                     android:onClick="numberEvent"
                     android:text="4"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                >
+                android:layout_marginTop="5dp">
 
 
                 <Button
@@ -163,7 +158,7 @@
                     android:onClick="numberEvent"
                     android:text="5"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_six"
@@ -175,7 +170,7 @@
                     android:onClick="numberEvent"
                     android:text="6"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_seven"
@@ -187,7 +182,7 @@
                     android:onClick="numberEvent"
                     android:text="7"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_eight"
@@ -199,13 +194,13 @@
                     android:onClick="numberEvent"
                     android:text="8"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
             </TableRow>
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                >
+                android:layout_marginTop="5dp">
 
 
                 <Button
@@ -218,7 +213,7 @@
                     android:onClick="numberEvent"
                     android:text="9"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_zero"
@@ -230,7 +225,7 @@
                     android:onClick="numberEvent"
                     android:text="0"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_equal"
@@ -242,7 +237,7 @@
                     android:onClick="equalEvent"
                     android:text="="
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
 
                 <Button
                     android:id="@+id/btn_percent"
@@ -253,13 +248,13 @@
                     android:background="@color/black"
                     android:text="%"
 
-                    android:textSize="34sp"></Button>
+                    ></Button>
             </TableRow>
+
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                >
+                android:layout_marginTop="5dp">
 
                 <Button
                     android:id="@+id/btn_ac"
@@ -269,8 +264,8 @@
                     android:layout_weight="1"
                     android:background="@color/black"
                     android:onClick="operaterEvent"
-                    android:text="AC"
-                    android:textSize="34sp">
+                    android:text="-"
+                    android:textSize="20dp">
 
                 </Button>
 
