camera intent Fahad

--- a/Intents/app/src/main/res/layout/activity_main.xml
+++ b/Intents/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,11 @@
         android:layout_height="wrap_content"
         android:text="Send Email"
         />
+    <Button
+        android:id="@+id/btnCapture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Capture Image"
+        />
 
 </LinearLayout>
