--- a/Intents/app/src/main/res/layout/activity_main.xml
+++ b/Intents/app/src/main/res/layout/activity_main.xml
@@ -34,5 +34,10 @@
         android:layout_height="wrap_content"
         android:text="Capture Image"
         />
-
+<Button
+        android:id="@+id/btnMap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Location"
+        />
 </LinearLayout>
